<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:gravity="center">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="229dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:minHeight="64dp"
        tools:text="@string/noteName" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/noteDone"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/deleteButton"
        android:layout_width="35dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="5dp"
        android:layout_weight="1"
        app:srcCompat="@drawable/delete_note"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/todo" />

</LinearLayout>