<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/myColor">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="408dp"
        android:layout_height="623dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonSave2"
        android:layout_width="143dp"
        android:layout_height="54dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="32dp"
        android:background="@color/myColorT"
        android:onClick="NoteCreate"
        android:text="@string/noteCreate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonSave3"
        android:layout_width="143dp"
        android:layout_height="54dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="32dp"
        android:background="@color/myColorT"
        android:onClick="NoteDelete"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.873"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:text="@string/empty"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/list"
        app:layout_constraintStart_toStartOf="@+id/list"
        app:layout_constraintTop_toTopOf="@+id/list"
        app:layout_constraintVertical_bias="0.539" />

</androidx.constraintlayout.widget.ConstraintLayout>